--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
       <input id="username" type="text" name="username">
     </div>
     <div>
-      <label for="password">Benny_Password:</label>
+      <label for="password">Rohit:</label>
       <input id="password" type="password" name="password">
     </div>
     <div>
