Set up live remote to automatically update upon local commits

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
 <form action="/login" method="post">
     <div>
-      <label for="username">Rohit:</label>
+      <label for="username">Username:</label>
       <input id="username" type="text" name="username">
     </div>
     <div>
-      <label for="password">Mathew:</label>
+      <label for="password">Password:</label>
       <input id="password" type="password" name="password">
     </div>
     <div>
